# Hi-PNG

./: .gitignore  CMakeLists.txt  README.md  create_dataset.py  requirements.txt
anns/: README.md
anns/include/: anns.hpp  base.hpp  distance.hpp
anns/include/graph/: hcnng.hpp  hnsw.hpp  nsg.hpp  vamana.hpp
anns/include/ivf/: ivfflat.hpp
anns/include/utils/: binary.hpp  recall.hpp  resize.hpp  timer.hpp  tqdm.hpp
cplusplus/: CMakeLists.txt  groundtruth.cpp  test_postfilter_hcnng.cpp  test_postfilter_hnsw.cpp  test_quad_tree.cpp
data_collect/: Makefile  bigann_dataset_io.py  bigann_datasets.py  binary.py  bruteforce.py  distance.py  interval.py  rawdata.py
experiment/: CMakeLists.txt  balance.py  balance_plot.ipynb  covid19.py  covid19_plot.ipynb  function.py  grid_search.py  if_anns_application_for_medicine.ipynb  impact_distribution_plot.ipynb  impact_rho.py  impact_rho_plot.ipynb  impact_scale.py  impact_scale_plot.ipynb  impact_sim_plot.ipynb  impact_tau_plot.ipynb  impact_thread.py  impact_thread_plot.ipynb  nohup.out  overall.py  overall_plot.ipynb  reduction_efficiency.ipynb  rf_anns.py  rf_anns2.py  rf_anns2_plot.ipynb  rf_anns_plot.ipynb  sp.py  sp_plot.ipynb  text2image.py  text2image_plot.ipynb
experiment/pyba/: _anns.cpp  _data.hpp  _pf_graph.hpp  _quad_tree.hpp
interval/: interval.hpp  pf_graph.hpp  quad_tree.hpp
